--- a/app/globals.css
+++ b/app/globals.css
@@ -32,8 +32,8 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #111827;
-    --foreground: #000000;
+    --background: #f9f8fd;
+    --foreground: #ffffff;
   }
 }
 
